--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,12 @@
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
 
+# Other IDEA releated files
+.idea/discord.xml
+.idea/jarRepositories.xml
+.idea/vcs.xml
+.idea/misc.xml
+
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
@@ -77,7 +83,6 @@ fabric.properties
 
 *.iml
 modules.xml
-.idea/misc.xml
 *.ipr
 
 ### Kotlin ###
@@ -125,3 +130,4 @@ gradle-app.setting
 **/build/
 
 # End of https://www.gitignore.io/api/gradle,kotlin,intellij+iml
+.idea/compiler.xml
