--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,5 @@ gradle-app.setting
 
 # End of https://www.gitignore.io/api/gradle,kotlin,intellij+iml
 .idea/compiler.xml
+
+.idea/kotlinScripting.xml
