--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           DOCKER_PASSWD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          docker login -u theleede -p $DOCKER_PASSWD votebot.registry.jetbrains.space
+          docker login -u theleede -p $DOCKER_PASSWD
           docker build -t ryss/gateway-service . -f Dockerfile
           docker tag ryss/gateway-service ryss/gateway-service:latest
           docker tag ryss/gateway-service ryss/gateway-service:${GITHUB_SHA::8}
