ci(gateway): add kubernetes config

--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: gateway-config
 data:
-  GATEWAY_SERVICE_INFLUXDB_ADDRESS: 'metrics.ryss.app'
+  GATEWAY_SERVICE_INFLUXDB_ADDRESS: ''
   GATEWAY_SERVICE_INFLUXDB_TOKEN: ''
   GATEWAY_SERVICE_INFLUXDB_ORG: ''
   GATEWAY_SERVICE_INFLUXDB_BUCKET: ''
